--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,9 +21,8 @@
   "powerHeader.newLines": 1,
   "powerHeader.template": "\\nAll Rights Reserved, (c) $CURRENT_YEAR <company>\\n\\nAuthor: <author> (<email>)\\nFile Name: $TM_FILENAME\\nCreated:  !created_date!\\nModified: !modified_date!\\n\\nDescription: ${1:description}\\n",
   "powerHeader.variables": [
-    
     // Update these variables to your own details
-    
+
     "<author>='Martin Shaw'",
     "<email>=\"developer@martinshaw.co\"",
     "<company>='CodeAtlas LTD.'",
@@ -45,30 +44,30 @@
     "editor.fontFamily": "Fira Code",
     "editor.lineNumbers": "off",
     "editor.fontLigatures": false,
-    "workbench.colorCustomizations": {},
+    "workbench.colorCustomizations": {}
   },
 
   // Formatting using the 'Prettier' extension
 
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
 
   // Others
 
   "git.autofetch": true,
-  "extensions.ignoreRecommendations": false,
+  "extensions.ignoreRecommendations": false
 }
