Add @see comment to top of JSON files

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,6 @@
 {
+  // @see https://github.com/martinshaw/dotfiles-for-new-projects
+
   "recommendations": [
     // Recommended for all new projects
 
